--- a/client/src/components/UI/button/styles.module.scss
+++ b/client/src/components/UI/button/styles.module.scss
@@ -1,5 +1,3 @@
-@import "/src/global-style/index.scss";
-
 .wrap {
   button {
     padding: 1rem 2rem;
@@ -39,14 +37,14 @@
     background: #3c0174;
     border-radius: 4px;
     color: #fff;
-    
+
     &:hover {
       background: #0a5dca;
     }
   }
 
   .transparent {
-    background: #E3E1E5;
+    background: #e3e1e5;
     color: #3c0174 !important;
   }
 }
