--- a/client/src/components/UI/pagination/styles.module.scss
+++ b/client/src/components/UI/pagination/styles.module.scss
@@ -6,10 +6,11 @@
 
 .pagination_wrap {
   @include flexx;
-  gap: 12px;
+  gap: 10px;
 
   button {
-    padding: 5px;
+    @include flexx;
+    padding: 0px;
     border: none;
     cursor: pointer;
     background: transparent;
@@ -19,11 +20,11 @@
     @include flexx;
     border: 1px solid #3c0174;
     padding: 5px;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     border-radius: 100px;
     color: #3c0174;
-    font-size: 14px;
+    font-size: 12px;
     cursor: pointer;
   }
 
