--- a/client/src/components/layout/styles.module.scss
+++ b/client/src/components/layout/styles.module.scss
@@ -40,6 +40,7 @@
       a {
         font-weight: 400;
         cursor: pointer;
+        text-decoration: underline;
       }
 
       .is_user_container {
