--- a/client/src/pages/profile/styles.module.scss
+++ b/client/src/pages/profile/styles.module.scss
@@ -47,6 +47,7 @@
       padding: 20px;
 
       h3 {
+        width: fit-content;
         font-weight: 500;
         font-size: 20px;
         line-height: 24px;
