--- a/client/src/components/UI/button/styles.module.scss
+++ b/client/src/components/UI/button/styles.module.scss
@@ -24,7 +24,7 @@
     color: #fff;
 
     &:hover {
-      background: darken(#3c0174, 10%);
+      background: rgba(54, 1, 104, 1);
     }
   }
   .secondary {
