--- a/client/src/pages/create-recipe/styles.module.scss
+++ b/client/src/pages/create-recipe/styles.module.scss
@@ -48,6 +48,46 @@
       gap: 15px;
     }
 
+    .add_ingredient {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      gap: 10px;
+
+      div {
+        width: 100%;
+      }
+
+      div:nth-child(1) {
+        flex: 5;
+      }
+
+      div:nth-child(2) {
+        flex: 3;
+        margin-top: 10px;
+      }
+    }
+
+    .ingredient_list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+
+      p {
+        background: #fff;
+        padding: 10px 20px;
+        border-radius: 50px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        svg {
+          cursor: pointer;
+        }
+      }
+    }
+
     .signup_footer {
       display: flex;
       flex-direction: column;
