--- a/client/src/components/UI/recipe-card/styles.module.scss
+++ b/client/src/components/UI/recipe-card/styles.module.scss
@@ -50,6 +50,7 @@
         background-clip: text;
         text-fill-color: transparent;
         margin: 0 0 2px 0;
+        text-align: center;
       }
 
       p {
