--- a/client/src/pages/recipe/styles.module.scss
+++ b/client/src/pages/recipe/styles.module.scss
@@ -14,15 +14,32 @@
     flex-direction: column;
     height: 80%;
 
+    .card_image_contt {
+      display: flex;
+      gap: 20px;
+
+      div:nth-child(1) {
+        flex: 1;
+      }
+
+      div:nth-child(2) {
+        flex: 2;
+      }
+
+      @media (max-width: 500px) {
+        flex-direction: column;
+      }
+    }
+
     .card_image {
       height: 100%;
       margin-bottom: 20px;
 
       img {
         width: 100%;
-        height: 350px;
+        height: 250px;
         border-radius: 10px;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
 
