--- a/client/src/pages/recipe/styles.module.scss
+++ b/client/src/pages/recipe/styles.module.scss
@@ -126,6 +126,10 @@
         font-size: 12px;
         font-weight: 400;
       }
+
+      svg {
+        cursor: pointer;
+      }
     }
 
     .footer_right {
@@ -196,13 +200,19 @@
             font-size: 14px;
             font-weight: 400;
             line-height: 20px;
-            margin: 10px 0 3px 0;
+            margin-top: 10px;
+          }
+
+          span {
+            font-size: 12px;
+            color: #8c8c8c;
+            margin-right: 10px;
           }
 
           button {
             background: none;
             border: none;
-            font-size: 14px;
+            font-size: 10px;
             color: #f91a1d;
             text-decoration: underline;
             margin: 0;
