--- a/client/src/components/UI/Images/styles.module.scss
+++ b/client/src/components/UI/Images/styles.module.scss
@@ -7,7 +7,7 @@
 .image_open_image {
   font-size: 12px;
   margin: 5px 0 0 5px;
-  
+
   span {
     font-weight: 600;
     cursor: pointer;
@@ -24,10 +24,21 @@
   border-radius: 5px;
 
   .image_input_wrapper_cont {
+    display: flex;
+    flex-direction: column;
     p {
       color: #3c0174;
       font-size: 12px;
       text-align: center;
+    }
+
+    button {
+      background-color: inherit;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      align-self: flex-end;
     }
 
     .image_input_btn {
@@ -36,15 +47,6 @@
 
       input {
         margin: 10px 0;
-      }
-
-      button {
-        background-color: #3c0174;
-        color: white;
-        padding: 7px 15px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
       }
     }
   }
